--- a/fastapi/Dockerfile
+++ b/fastapi/Dockerfile
@@ -3,4 +3,4 @@ WORKDIR /app
 COPY requirements.txt requirements.txt
 RUN pip3 install -r requirements.txt
 COPY . .
-CMD ["uvicorn", "serwer:app", "--host", "0.0.0.0", "--port", "1020"]
+CMD ["uvicorn", "api_engine:app", "--host", "0.0.0.0", "--port", "5000"]
